<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:background="#A22525">

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progress_bar_activity_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminateTint="#FFFF"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="220dp"
        android:background="@drawable/logo_gfy"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/icono_email"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayout"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        android:textColorHint="#FFFF"
        tools:targetApi="o">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email_activity_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#FFFF"
            android:textColorHint="#FFFF"
            android:backgroundTint="#FFFF"
            android:hint="email"
            app:layout_constraintBottom_toTopOf="@+id/edit_pass_activity_main"
            android:digits="_-.@ABCDEFGHIJKLMNÑOPQRSTUVWXYZabcdefghijklmnñopqrstuvwxyz0123456789"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/icono_candado"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout3"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayout3"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_ingresar_activity_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#FFFFFF"
        android:textColorHint="#FFFF"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_pass_activity_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:textColor="#FFFF"
            android:textColorHint="#FFFF"
            android:backgroundTint="#FFFF"
            android:hint="contraseña"
            android:digits="_-.@ABCDEFGHIJKLMNÑOPQRSTUVWXYZabcdefghijklmnñopqrstuvwxyz0123456789"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_ingresar_activity_main"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/forma_boton_dos"
        android:text="@string/ingresar"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_registro_con_email_activity_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:id="@+id/btn_registro_con_email_activity_main"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:background="@drawable/forma_boton_registro_email"
        android:drawableStart="@drawable/logo_email"
        android:text="@string/registrate_con_email"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_registro_con_facebookView_activity_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_registro_con_facebook_activity_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btn_registro_con_google_activity_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />
    <Button
        android:id="@+id/btn_registro_con_facebookView_activity_main"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:background="@drawable/forma_boton_registro_facebook"
        android:drawableStart="@drawable/logo_facebook"
        android:text="@string/registrate_con_facebook"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_registro_con_google_activity_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <Button
        android:id="@+id/btn_registro_con_google_activity_main"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:background="@drawable/forma_boton_registro_gmail"
        android:drawableStart="@drawable/logo_gmail"
        android:text="@string/registrate_con_gmail"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99"
        />

</androidx.constraintlayout.widget.ConstraintLayout>